salesforce-fields/force-app/main/default/objects/Lead/fields/Alocacao__c.field-meta.xml
<CustomField>
    <fullName>Alocacao__c</fullName>
    <label>Alocação</label>
    <description>Dados de alocação dos ativos escolhidos na calculadora em formato JSON</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>