salesforce-fields/force-app/main/default/objects/Lead/fields/Data_Submissao__c.field-meta.xml
<CustomField>
    <fullName>Data_Submissao__c</fullName>
    <label>Data Submissão</label>
    <description>Data e hora da submissão da calculadora</description>
    <type>DateTime</type>
</CustomField>