salesforce-fields/force-app/main/default/objects/Lead/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <label>Page URL</label>
    <description>URL da página onde o lead foi capturado</description>
    <type>Url</type>
</CustomField>