salesforce-fields/force-app/main/default/objects/Lead/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <description>ID da sessão da calculadora para rastreamento</description>
    <type>Text</type>
    <length>255</length>
</CustomField>