salesforce-fields/force-app/main/default/objects/Lead/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <label>Submission Type</label>
    <description>Tipo de submissão da calculadora</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>typebot_enhanced</fullName>
                <label>Typebot Enhanced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>