salesforce-fields/force-app/main/default/objects/Lead/fields/Supabase_ID__c.field-meta.xml
<CustomField>
    <fullName>Supabase_ID__c</fullName>
    <label>Supabase ID</label>
    <description>ID do registro correspondente no Supabase</description>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>