salesforce-fields/force-app/main/default/objects/Lead/fields/Typebot_Completed__c.field-meta.xml
<CustomField>
    <fullName>Typebot_Completed__c</fullName>
    <label>Typebot Completed</label>
    <description>Indica se o lead completou o fluxo do Typebot</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>