salesforce-fields/force-app/main/default/objects/Lead/fields/Typebot_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Typebot_Completed_At__c</fullName>
    <label>Typebot Completed At</label>
    <description>Data e hora da conclusão do Typebot</description>
    <type>DateTime</type>
</CustomField>