salesforce-fields/force-app/main/default/objects/Lead/fields/Typebot_Data__c.field-meta.xml
<CustomField>
    <fullName>Typebot_Data__c</fullName>
    <label>Typebot Data</label>
    <description>Dados completos capturados pelo Typebot em formato JSON</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>