salesforce-fields/force-app/main/default/objects/Lead/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <label>User Agent</label>
    <description>User Agent do navegador do usuário</description>
    <type>Text</type>
    <length>255</length>
</CustomField>